--- a/SharpCAD.HyAgent/SharpCAD.HyAgent.csproj
+++ b/SharpCAD.HyAgent/SharpCAD.HyAgent.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="AutoCAD.NET" Version="25.0.1" />
     <PackageReference Include="AutoCAD.NET.Core" Version="25.0.0" />
     <PackageReference Include="AutoCAD.NET.Model" Version="25.0.0" />
+    <PackageReference Include="Google.GenAI" Version="0.10.0" />
     <PackageReference Include="ReaLTaiizor" Version="3.8.1.10" />
   </ItemGroup>
 
@@ -29,6 +30,21 @@
     <Reference Include="Acmgd">
       <HintPath>..\..\..\..\..\..\Program Files\Autodesk\AutoCAD 2025\acmgd.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
