--- a/SharpCAD.HyAgent/SharpCAD.HyAgent.csproj
+++ b/SharpCAD.HyAgent/SharpCAD.HyAgent.csproj
@@ -7,6 +7,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <OutputType>Library</OutputType>
     <UseWPF>True</UseWPF>
+	  <ForceDesignerDpiUnaware>true</ForceDesignerDpiUnaware>
+	  <InformationalVersion>$(Version)-$(SourceRevisionId)</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +16,10 @@
     <PackageReference Include="AutoCAD.NET.Core" Version="25.0.0" />
     <PackageReference Include="AutoCAD.NET.Model" Version="25.0.0" />
     <PackageReference Include="Google.GenAI" Version="0.10.0" />
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.9.50">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="ReaLTaiizor" Version="3.8.1.10" />
   </ItemGroup>
 
