重构命名空间并集成 Deepseek AI 支持
本次提交完成以下主要内容：

- 项目命名空间、工程文件重命名为 ImgHorizon，统一品牌标识，调整相关引用与资源路径。
- 新增 Deepseek AI 支持，包括 API 封装、UI 配置、服务切换与调用逻辑。
- 主界面增加 Deepseek 选项及 API Key 输入，支持多 AI 服务切换。
- 优化 Gemini 流式输出体验，提升响应速度。
- 配置项支持多服务 API Key 管理，初始化流程优化。
- 默认关闭日志输出，减少调试信息干扰。
- 更新 csproj 文件，完善依赖与资源管理。
- 其它细节优化，包括欢迎语、版权信息及代码风格调整。

本次重构提升了产品的可扩展性和多 AI 服务兼容能力。

--- a/SharpCAD.HyAgent/Properties/launchSettings.json
+++ b/SharpCAD.HyAgent/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "SharpCAD.HyAgent": {
+    "ImgHorizon.HyAgent": {
       "commandName": "Project"
     },
     "AutoCAD": {
