支持 Deepseek Reasoning 并优化推理链展示
本次提交主要内容如下：

- 增加 Deepseek API 的 Reasoning/Thinking（思维链）功能支持，新增相关字段与序列化逻辑；
- `GenerateTextAsync` 和流式方法支持启用 Reasoning，并自动切换模型；
- 推理内容与对话内容分阶段流式输出，UI 可分别展示；
- 新增 `ProgressReport` 类型，提升流式交互体验；
- UI 侧优化 Reasoning 展示流程，增加推理阶段提示；
- 增加开发菜单项便于调试；
- 项目输出类型由 WinExe 改为 Library，便于集成或测试。

--- a/SharpCAD.HyAgent/ImgHorizon.HyAgent.csproj
+++ b/SharpCAD.HyAgent/ImgHorizon.HyAgent.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <UseWPF>True</UseWPF>
 	  <ForceDesignerDpiUnaware>true</ForceDesignerDpiUnaware>
 	  <InformationalVersion>$(Version)-$(SourceRevisionId)</InformationalVersion>
